--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,20 @@ server:
 spring:
   datasource:
     derver: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/d_hungry?serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://39.99.178.106:3306/d_house?serverTimezone=Asia/Shanghai
     username: root
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
 
 
+hungry:
+  redis:
+    host: 101.201.123.113
+    port: 6379
+    psw: root
+  passkey: jWhVzB0phu6s7z6dnsO8fg==
+
+
+
+mybatis-plus:
+  mapper-locations: classpath:mapper/*.xml
